// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explorer renders 1`] = `
<Explorer
  currentPageId={null}
  depth={0}
  gotoPage={[Function]}
  isVisible={false}
  nodes={Object {}}
  onClose={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
/>
`;

exports[`Explorer renders 2`] = `<Connect(Explorer) />`;

exports[`Explorer visible 1`] = `
<Explorer
  currentPageId={1}
  depth={0}
  gotoPage={[Function]}
  isVisible={true}
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "id": 0,
        "isError": false,
        "isFetchingChildren": true,
        "isFetchingTranslations": false,
        "meta": Object {
          "children": Object {},
          "parent": null,
          "status": Object {
            "has_unpublished_changes": true,
            "live": false,
            "status": "",
          },
        },
      },
    }
  }
  onClose={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
/>
`;

exports[`Explorer visible 2`] = `
<ExplorerPanel
  depth={0}
  gotoPage={[Function]}
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "id": 0,
        "isError": false,
        "isFetchingChildren": true,
        "isFetchingTranslations": false,
        "meta": Object {
          "children": Object {},
          "parent": null,
          "status": Object {
            "has_unpublished_changes": true,
            "live": false,
            "status": "",
          },
        },
      },
    }
  }
  onClose={[Function]}
  page={
    Object {
      "children": Object {
        "count": 0,
        "items": Array [],
      },
      "id": 0,
      "isError": false,
      "isFetchingChildren": true,
      "isFetchingTranslations": false,
      "meta": Object {
        "children": Object {},
        "parent": null,
        "status": Object {
          "has_unpublished_changes": true,
          "live": false,
          "status": "",
        },
      },
    }
  }
/>
`;
